feat(server): setup google auth, create, edit, delete idea and variation
